--- a/Kvent/static/css/index.css
+++ b/Kvent/static/css/index.css
@@ -153,7 +153,7 @@ section .event-section {
     text-align: center;
     color: white;
     border-radius: 15px;
-    
+    margin: 1em;    
 }
 
 /*multiplatform device size*/
